--- a/myhp/templates/base.html
+++ b/myhp/templates/base.html
@@ -29,6 +29,9 @@
             <div class="github">
                 <a href="https://github.com/shion24hub" target="_blank" rel="noopener noreferrer"><img src="../../static/images/github.jpg" alt="github-icon" width="5%" height="5%"></a>
             </div>
+            <div class="twitter">
+                <a href="https://twitter.com/enqu990" target="_blank" rel="noopener noreferrer"><img src="../../static/images/twitter.jpg" alt="twitter-icon" width="5%" height="5%"></a>
+            </div>
         </div>
     </div>
     <div class="main-contents">
